# samplecodes

./: LM75B_breakout.ino
10004_Conta_5x5_RGB_LED_Matrix_Module/conta_5x5_matrix_animation/: conta_5x5_matrix_animation.ino
10004_Conta_5x5_RGB_LED_Matrix_Module/conta_5x5_matrix_simple/: conta_5x5_matrix_simple.ino
10030_Conta_Passive_Buzzer_Module/ringtone/: ringtone.ino
10030_Conta_Passive_Buzzer_Module/ticktack/: ticktack.ino
10031_Conta_Lever_and_Push_Switch_Module/events/: LeverAndPushSw.h  events.ino
10031_Conta_Lever_and_Push_Switch_Module/simpleread/: simpleread.ino
10201_ATtiny1616_Breakout/: package_drazzy.com_index.json
10208_INA181_Current_Sensor_Module/measure_current/: measure_current.ino
10281_Conta_VL53L5CX_ToF_8x8_Mulizone_Ranging_Sensor_Module/distance_array/: distance_array.ino
10373_STM32G4_Dev_Board/analog_internal/: analog_internal.ino
10373_STM32G4_Dev_Board/analogs_read/: analogs_read.ino
10373_STM32G4_Dev_Board/blink/: blink.ino
10373_STM32G4_Dev_Board/dacout/: dacout.ino
10373_STM32G4_Dev_Board/dcdc_mode_chg/: dcdc_mode_chg.ino
10373_STM32G4_Dev_Board/deep_blink/: deep_blink.ino
10373_STM32G4_Dev_Board/digital_inout/: digital_inout.ino
10373_STM32G4_Dev_Board/hse_enable/: build_opt.h  hse_enable.ino  system_clock.ino
10373_STM32G4_Dev_Board/pwm_servo/: pwm_servo.ino
10373_STM32G4_Dev_Board/rtc/: rtc.ino
10373_STM32G4_Dev_Board/simple_rtc/: simple_rtc.ino
10373_STM32G4_Dev_Board/sleep/: sleep.ino
10437_MAX-M10S_GNSS_Receiver_Module/espr_dev_qzss_drc_drx_decode/: espr_dev_qzss_drc_drx_decode.ino
10437_MAX-M10S_GNSS_Receiver_Module/get_position/: get_position.ino
10497_One_Button_UPDI_Programmer/: README.md  main.py
10497_One_Button_UPDI_Programmer/hex/: One_Button_UPDI_Programmer_Demo.hex
10827_Picossci_2B_Branch_TempLogger/: README.md
10827_Picossci_2B_Branch_TempLogger/3D_Models/: PicossciBranch2B_btm.stl  PicossciBranch2B_top.stl
10827_Picossci_2B_Branch_TempLogger/Picossci_Branch2B_Templogger/: Picossci_Branch2B_Templogger.ino
1796_RPi_EnvSensor/: README.md
1796_RPi_EnvSensor/ATTiny/: I2Cslave.h  USI_TWI_Slave.c  readme.md
1796_RPi_EnvSensor/Python_RPi/: i2c_Sensor4.py
5372_ESPr_Dev32_Grove/: README.md
5372_ESPr_Dev32_Grove/DIO_AIN/: DIO_AIN.ino
5775_ESPr_Dev_Grove/: README.md
5775_ESPr_Dev_Grove/BME280/: BME280.ino
5775_ESPr_Dev_Grove/DIO_AIN/: DIO_AIN.ino
7255_Graphic_LCD_for_RPi_Pico/: README.md
7255_Graphic_LCD_for_RPi_Pico/MicroPython/: main.py
8296_Picossci_DC_Servo_motor_driver/: README.md
8296_Picossci_DC_Servo_motor_driver/example/: RPi_4_Host.py  RPi_Pico_Host.py
8296_Picossci_DC_Servo_motor_driver/firmwear/: Command.txt  MotorCommandHAT.py
8512_PRi_motor_driver_simple/: 8512_motor.py
8902_AQM1602Y_Breakout/: README.md
8902_AQM1602Y_Breakout/Python/: RPi_AQM1602Y_breakout.py
8967_Picossci_Matrix_LED/: README.md
8967_Picossci_Matrix_LED/firmwear/: Command.txt
9185_ESPr_Developer_C3/ir_recv/: ir_recv.ino
9185_ESPr_Developer_C3/ir_send/: ir_send.ino
9206_Picossci_Relay/: README.md
9373_ESPr32_conta_sample/: ._ESPr32_2x2_switch
9560_Picossci_NTSC/: README.md  platformio.ini
9700_Picossci_2_Audio/: README.md  platformio.ini
9700_Picossci_Audio/: .gitignore  README.md  platformio.ini
9877_DRV8311H_BLDC_Motor_Driver_Module/: README.md
Arduino/: PCA9624PW_breakout.ino
BME280/: README.md
INA260_breakout/: INA260.lib  main.cpp  mbed_config.h
LSM9DS1for_ESP-WROOM/: ESP_LSM_test1.ino  README.md
M5Stack/MLX9060_M5/: colors.h  (+1 more)
Picossci_DC:Servo_blog/: LICENSE.txt
RP2350_benchmark/: CMakeLists.txt
RP2350_benchmark/benchmark_double/: CMakeLists.txt  benchmark_double.c
RP2350_benchmark/benchmark_float/: CMakeLists.txt  benchmark_float.c
RP2350_benchmark/benchmark_integer/: CMakeLists.txt  benchmark_integer.c
RP2350_benchmark/bitbang/: CMakeLists.txt  bitbang.c
RP2350_benchmark/idle/: CMakeLists.txt  idle.c
RP2350_benchmark/memory_test/: CMakeLists.txt  memory_test.c
RPi_EnvSensor/: README.md
bt_relay_uart/: bt_relay_uart.ino
spresense_oled_bme280/: spresense_oled_bme280.ino
(+255 files in other folders)
